--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(match_lib
-        decimal.cpp
-        engine.cpp
+        decimal.cc
+        engine.cc
 )
 target_include_directories(match_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
